# bazel_examples

cpp-tutorial/stage1/: BUILD  WORKSPACE
cpp-tutorial/stage1/internal/: BUILD.bazel
cpp-tutorial/stage1/internal/language/: BUILD.bazel
cpp-tutorial/stage1/internal/language/test_filegroup/: BUILD  lang.go
cpp-tutorial/stage1/main/: BUILD
cpp-tutorial/stage1/xiang_test/: BUILD.bazel
cpp-tutorial/stage2/main/: BUILD  hello-greet.cc  hello-world.cc  utils.cpp  utils.hpp
