filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "//internal/language:all_files",
    ],
    visibility = ["//visibility:public"],
)

tconf_binary(
    name = "tconf_bin_internal",
    srcs = [
        "BUILD.bazel",
        "//internal/language:all_files",
    ],
    custom_xiang = 2324,
    visibility = ["//visibility:public"],
)
